# srvlib

./: CMakeLists.txt  README.md
CMakeModules/: FindBlackMagic.cmake  FindBoost.cmake  FindCinder.cmake  FindOpenCV.cmake  FindSRVLib.cmake  Findisi_api.cmake  isi_api-config.cmake
assets/: shader.frag  shader.vert
include/srvlib/: srvlib.hpp
include/srvlib/io/pose/: isi.hpp  pose_grabber.hpp  ros.hpp
include/srvlib/io/video/: file.hpp  video.hpp
include/srvlib/io/video/sdi/: DeckLinkAPI.h  DeckLinkAPI_h.h  capture.h  config.h  delegate.h  frame_queue.h  playout.h  sdi.hpp
include/srvlib/model/: model.hpp  node.hpp  pose.hpp
include/srvlib/model/davinci/: davinci.hpp
include/srvlib/utils/: config_reader.hpp  math.hpp
include/srvlib/view/: camera.hpp  gui.hpp  renderer.hpp  sub_window.hpp
srvlib/: CMakeLists.txt
srvlib/io/pose/: isi.cpp  pose_grabber.cpp  ros.cpp
srvlib/io/video/: file.cpp  video.cpp
srvlib/io/video/sdi/: capture.cpp  config.cpp  decklink_api_dispatch.cpp  delegate.cpp  frame_queue.cpp  playout.cpp  sdi.cpp
srvlib/model/: model.cpp  node.cpp  pose.cpp
srvlib/model/davinci/: davinci.cpp
srvlib/utils/: config_reader.cpp  math.cpp
srvlib/view/: camera.cpp  gui.cpp  renderer.cpp  sub_window.cpp
